<resources>
    <string name="app_name" translatable="false">kirApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Reset Password</string>
    <string name="user">User</string>
    <string name="register">Register</string>
    <string name="icon_3">icon_3</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone Number</string>
    <string name="identity_number">IdentityNumber</string>
    <string name="birth_date">Birth Date</string>
    <string name="search">Search</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="main_page">Main Page</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="login_with">Login with</string>
    <string name="login_fail">Login failed!</string>
    <string name="password_reset">Password Reset</string>
    <string name="reset_password">Reset password</string>
    <string name="back">Back</string>
    <string name="email_empty">Email is empty</string>
    <string name="fp_link_send">Password reset link is send to your email</string>
    <string name="fp_error">Error has been occurred</string>
    <string name="select_date">Select Date</string>
    <string name="fn_empty">Please enter name</string>
    <string name="ln_empty">Please enter surname</string>
    <string name="bd_empty">Please enter birth date</string>
    <string name="e_empty">Please enter email</string>
    <string name="p_empty">Please enter minimum 8 characters length password</string>
    <string name="pn_empty">Please enter phone number</string>
    <string name="g_empty">Please select gender</string>
    <string name="input_empty">Field can not be empty</string>
    <string name="register_error">Failed to create account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_not_verified">You need to verify your email</string>
    <string name="verification_text">Verification link is send to your email. Check your mailbox</string>
    <string name="sign_out">Sign Out</string>
    <string name="message">Message</string>
    <string name="advert">Advert</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="advert_images">Advert images</string>
    <string name="submit">Submit</string>
    <string name="advert_list">My Adverts</string>
    <string name="theme">Theme</string>
    <string name="empty_input">Inputs should not be empty</string>
    <string name="advert_added">Advert added</string>
    <string name="settings">Settings</string>
    <string name="createdAt">"Member since: "</string>
    <string name="profile_cant_loaded">Profile details can\'t loaded</string>
    <string name="advert_count">"Advert count: "</string>
    <string name="required">Required</string>
    <string name="advert_image">advert_image</string>
    <string name="advert_like_count">Advert like count</string>
    <string name="send_message">Send Message</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="bookmark">Bookmark</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="add_images">Add images</string>
    <string name="take_picture">Take picture</string>
    <string name="select_images">Select images</string>
    <string name="upload_image">Upload image</string>
    <string name="add">add</string>
    <string name="email_isnot_valid">Email is not valid</string>
    <string name="password_isnot_valid">Password is not valid</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="list_all_users">List all users</string>
    <string name="list_all_adverts">List all adverts</string>
    <string name="admin_customer_image">admin_customer_image</string>
    <string name="gender">Gender</string>
    <string name="reset">Reset Image</string>
    <string name="update">Update</string>
    <string name="admin_panel">Admin panel</string>
    <string name="change_status">Change Status</string>
    <string name="change_theme">Change Theme</string>
    <string name="delete_account">Delete Account</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="credentials">Credentials</string>
    <string name="city">City</string>
    <string name="county">County</string>
    <string name="icon">Icon</string>
    <string name="change_language">Change Language</string>
    <string-array name="categories">
        <item>Other</item>
        <item>Automotive Equipment</item>
        <item>Motorcycle Equipment</item>
        <item>Marine Equipment</item>
        <item>Computers</item>
        <item>Cell Phones</item>
        <item>Cameras &#38; Photographic Equipment</item>
        <item>Home Electronics</item>
        <item>Games &#38; Consoles</item>
    </string-array>
</resources>