<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainPageFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/main_page" />

    <item
        android:id="@+id/addAdvertFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/advert" />

    <item
        android:id="@+id/messageFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/message" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile" />
</menu>