<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mainPageFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/main_page"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/holder"
        android:enabled="false"
        android:title=""
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/ic_chat_bubble"
        android:title="@string/message"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>