<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/admin_customer_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/admin_customer_image"
        android:src="@mipmap/ic_blue_1" />

    <TextView
        android:id="@+id/admin_customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/admin_customer_image"
        android:text="@string/name"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/admin_reset_photo"
        style="@style/SubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admin_customer_name"
        android:layout_toEndOf="@id/admin_customer_image"
        android:gravity="center_horizontal"
        android:text="@string/reset"
        android:textSize="24sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/admin_status"
        style="@style/SubmitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/admin_reset_photo"
        android:layout_toEndOf="@id/admin_customer_image"
        android:gravity="center_horizontal"
        android:text="@string/change_status"
        android:textSize="24sp" />

</RelativeLayout>
