<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AdvertDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/advert_post_image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/advert_image" />

        <TextView
            android:id="@+id/advert_post_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/advert_post_image"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_white_rounded"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:text="@string/advert"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/advert_post_like_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/advert_post_image"
            android:layout_alignBottom="@id/advert_post_image"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/bg_white_rounded"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:text="@string/advert_like_count"
            app:drawableStartCompat="@drawable/ic_heart"
            app:drawableTint="@color/black" />

        <LinearLayout
            android:id="@+id/advert_post_detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/advert_post_image"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/advert_post_category_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/category"
                android:textColor="@color/malachite_700"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/advert_post_subCategory_btn"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/sub_category"
                android:textColor="@color/malachite_700"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/advert_post_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/createdAt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/advert_post_user_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/advert_post_detail_container"
            android:layout_marginHorizontal="16dp"
            android:background="@color/black_300"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/advert_post_user_pp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_blue_2"
                app:shapeAppearanceOverlay="@style/imageViewRounded" />

            <TextView
                android:id="@+id/advert_post_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/advert_post_user_message_btn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:contentDescription="@string/message"
                android:text="@string/send_message"
                android:layout_marginEnd="16dp"
                android:textColor="@color/white"
                app:icon="@drawable/ic_chat_bubble"
                app:iconTint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/advert_post_user_container"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="32dp"
            android:background="@color/black_300"
            android:orientation="vertical">

            <TextView
                android:id="@+id/advert_post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/advert_post_like_btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/like"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="4dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/advert_post_bookmark_btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bookmark"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="4dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/advert_post_share_btn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="4dp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
