<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_advert_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddAdvertFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_blue_1_foreground" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/name"
                android:minHeight="48dp"
                app:boxStrokeColor="@color/beyaz2"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="60"
                app:helperText="@string/required"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/advert_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/description"
                android:minHeight="48dp"
                app:boxStrokeColor="@color/beyaz2"
                app:boxStrokeWidth="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="255"
                app:helperText="@string/required"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/advert_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/price"
                android:minHeight="48dp"
                app:boxStrokeColor="@color/beyaz2"
                app:boxStrokeWidth="2dp"
                app:helperText="@string/required"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/advert_price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/advert_image"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/advert_image"
                android:text="@string/add_images"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:icon="@drawable/ic_image"
                app:iconGravity="textTop"
                app:iconSize="64dp"
                app:iconTint="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/advert_add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.TextButton.Dialog"
                android:layout_margin="32dp"
                android:backgroundTint="@color/blue_500"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>