<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AdminDashboardActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/list_all_adverts_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/list_all_adverts" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/list_all_users_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/list_all_users" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/admin_quit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/sign_out" />

    <FrameLayout
        android:id="@+id/admin_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90" />

</LinearLayout>